--- a/beadandó/hátbazdmeg.css
+++ b/beadandó/hátbazdmeg.css
@@ -1,15 +1,36 @@
+body {
+    background-color: aliceblue;
+}
+
+.grid-con {
+    display: grid;
+    gap: 3%;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    margin: 30px 0 10px 0;
+    
+}
+
+.kep-div {
+    
+}
+
+p {
+    margin: 0;
+}
+
 .lap {
     margin: auto;
-    width: 50%;
-    height: 1000px;
-    padding-left: 20px;
-    padding-right: 20px;
+    width: 800px;
+    height: 1100px;
     border: 2px solid black;
     background-color: cornflowerblue;
-}
-
-div {
     text-align: justify;
+    padding: 0 20px 0 20px;
+    font-size: large;
 }
-
-
