--- a/beadandó/hátb+.css
+++ b/beadandó/hátb+.css
@@ -46,10 +46,9 @@ h2 {
     margin: 8px;
     padding: 8px;
     background-color: coral;
-    border: 2px solid black;
+    
 }
 
-#egy {
-    margin-bottom: 10px;
-    border: 2px solid black;
+.row {
+    gap: 10px;
 }
