--- a/beadandó/hátb+.css
+++ b/beadandó/hátb+.css
@@ -1,10 +1,6 @@
 body {
     background-color: aliceblue;
-}
-
-.grid-con {
-    display: grid;
-    gap: 3%;
+    padding: 2%;
 }
 
 h1 {
@@ -16,10 +12,6 @@ h2 {
     
 }
 
-.kep-div {
-    
-}
-
 .kep8 {
     width: 40%;
     float: right;
@@ -28,27 +20,32 @@ h2 {
 }
 
 .lap {
-    margin: auto;
+    margin: 2% auto 2% auto;
     width: 800px;
     height: 1100px;
-    border: 2px solid black;
-    background-color: cornflowerblue;
+    background-color:#fffcf1;
     text-align: justify;
     padding: 0 20px 0 20px;
     font-size: large;
+    box-shadow: 0 0 8px 2px #888;
 }
 
 .grid-img {
-    max-width: 200px;
+    width: 200px;
 }
 
 .col {
     margin: 8px;
     padding: 8px;
-    background-color: coral;
+    background-color: rgba(131, 77, 58, 0.87);
+    border: 5px solid black;
     
 }
 
 .row {
-    gap: 10px;
+    grid-row-gap: 10px;
+}
+
+.container {
+    
 }
