--- a/beadandó/hátb+.css
+++ b/beadandó/hátb+.css
@@ -16,7 +16,8 @@ h2 {
     width: 40%;
     float: right;
     clear: both;
-    margin: 20px;
+    margin: 20px 0 0 20px;
+    box-shadow:0 0 8px 2px #888;
 }
 
 .lap {
@@ -46,6 +47,34 @@ h2 {
     grid-row-gap: 10px;
 }
 
-.container {
-    
+table {
+    width: 450px;
+    height: 400px;
+    text-align: center;
+    border: 2px solid black;
+    background-color: white;
+}
+
+.szaporodas {
+    text-align: center;
+}
+
+.kep10 {
+    margin: 8px 0 8px 0;
+    float: right;
+    clear: both;
+    width: 40%;
+    box-shadow:0 0 8px 2px #888;
+}
+
+.kep12 {
+    margin: 8px 0 8px 0;
+    float: right;
+    clear: both;
+    width: 40%;
+    box-shadow:0 0 8px 2px #888;
+}
+
+td {
+    border: 1px solid black;
 }
