--- a/beadandó/hátb+.css
+++ b/beadandó/hátb+.css
@@ -3,44 +3,28 @@ body {
     padding: 5%;
 }
 
+.lap {
+    margin: 0 auto 10% auto;
+    width: 800px;
+    height: 1100px;
+    background-color: #fbfbf8;
+    text-align: justify;
+    padding: 0 20px 0 20px;
+    box-shadow: 0 0 8px 2px #888;
+}
+
 h1 {
     position: relative;
     top: 5px;
     text-align: center;
 }
 
+
 h2 {
     margin: 50px 0 10px 0;
 }
 
-hr {
-    border: 2px solid black !important;
-}
-
-.kep10 {
-    margin: 8px 0 8px 0;
-    float: right;
-    clear: both;
-    width: 40%;
-    box-shadow: 0 0 8px 2px #888;
-}
-
-.kep12 {
-    margin: 8px 0 8px 0;
-    float: right;
-    clear: both;
-    width: 40%;
-    box-shadow: 0 0 8px 2px #888;
-}
-
-.h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne {
-    font-size: calc(1.375rem + 1.5vw);
-    position: relative;
-    top: 5px;
-    text-align: center;
-}
-
-.kep8 {
+#ax3 {
     width: 40%;
     float: right;
     clear: both;
@@ -52,40 +36,6 @@ hr {
     border-image-outset: 0px 0px 0px 0px;
     border-image-repeat: stretch stretch;
     border-image-source: url("/beadandó/fa2.jpg");
-}
-
-.lap {
-    margin: 0 auto 10% auto;
-    width: 800px;
-    height: 1100px;
-    background-color: #fbfbf8;
-    text-align: justify;
-    padding: 0 20px 0 20px;
-    box-shadow: 0 0 8px 2px #888;
-}
-
-.container {
-    padding: 10px;
-}
-
-.grid-img {
-    padding: 10px;
-    border: 20px solid #0000;
-    outline: 2px solid #000;
-    outline-offset: -10px;
-    background: conic-gradient(from 90deg at 2px 2px, #0000 90deg, #000 0);
-}
-
-.row {
-    row-gap: 100px;
-}
-
-.row2 {
-    row-gap: 25px;
-}
-
-.row3 {
-    row-gap: 100px;
 }
 
 table {
@@ -100,7 +50,46 @@ tr {
     border: 2px solid black !important;
 }
 
-.szaporodas {
+.fejlodese {
     text-align: center;
     margin: 30px 0 30px 0;
+}
+
+/* hr {
+    border: 2px solid black !important;
+} */
+
+.table-img {
+    margin: 8px 0 8px 0;
+    float: right;
+    clear: both;
+    width: 40%;
+    box-shadow: 0 0 8px 2px #888;
+}
+
+.h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne {
+    font-size: calc(1.375rem + 1.5vw);
+    position: relative;
+    top: 5px;
+    text-align: center;
+}
+
+.container {
+    padding: 10px;
+}
+
+.grid-img {
+    padding: 10px;
+    border: 20px solid #0000;
+    outline: 2px solid #000;
+    outline-offset: -10px;
+    background: conic-gradient(from 90deg at 2px 2px, #0000 90deg, #000 0);
+}
+
+.side-row {
+    row-gap: 100px;
+}
+
+.middle-row {
+    row-gap: 20px;
 }
