--- a/beadandó/Megoldás/hátb+.css
+++ b/beadandó/Megoldás/hátb+.css
@@ -1,5 +1,4 @@
 body {
-    background-color: aliceblue;
     padding: 5%;
 }
 
@@ -14,14 +13,16 @@ body {
 }
 
 h1 {
+    text-align: center;
     position: relative;
     top: 5px;
-    text-align: center;
 }
 
-
-h2 {
-    margin: 50px 0 10px 0;
+.h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne {
+    text-align: center;
+    position: relative;
+    top: 5px;
+    font-size: 32pt;
 }
 
 #ax3 {
@@ -35,22 +36,22 @@ h2 {
     border-image-width: 25px 25px 25px 25px;
     border-image-outset: 0px 0px 0px 0px;
     border-image-repeat: stretch stretch;
-    border-image-source: url("/beadandó/fa2.jpg");
+    border-image-source: url("/beadandó/forrás/frame.jpg");
 }
 
 table {
     width: 450px;
     height: 400px;
     text-align: center;
-    background-color: white;
-    border: 2px solid black;
+    background-color: #fff;
+    border: 2px solid #000;
 }
 
 tr {
-    border: 2px solid black !important;
+    border: 2px solid #000 !important;
 }
 
-.fejlodese {
+#fejlodese {
     text-align: center;
     margin: 30px 0 30px 0;
 }
@@ -65,13 +66,6 @@ tr {
     clear: both;
     width: 40%;
     box-shadow: 0 0 8px 2px #888;
-}
-
-.h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne {
-    font-size: calc(1.375rem + 1.5vw);
-    position: relative;
-    top: 5px;
-    text-align: center;
 }
 
 .container {
