--- a/beadandó/Megoldás/hátb+.css
+++ b/beadandó/Megoldás/hátb+.css
@@ -18,13 +18,6 @@ h1 {
     top: 5px;
 }
 
-.h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne {
-    text-align: center;
-    position: relative;
-    top: 5px;
-    font-size: 32pt;
-}
-
 #ax3 {
     width: 40%;
     float: right;
@@ -56,9 +49,18 @@ tr {
     margin: 30px 0 30px 0;
 }
 
-/* hr {
-    border: 2px solid black !important;
-} */
+a {
+    font-style: italic;
+}
+
+a:hover {
+    text-decoration: none;
+    color: darkblue;
+}
+
+a:visited {
+    /* color: purple; */
+}
 
 .table-img {
     margin: 8px 0 8px 0;
